--- a/manifests/charts/istiod-remote/files/gen-istiod-remote.yaml
+++ b/manifests/charts/istiod-remote/files/gen-istiod-remote.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: istio
-  namespace: service-graph00
+  namespace: default
   labels:
     istio.io/rev: default
     release: istiod-remote
@@ -16,7 +16,7 @@ data:
 
   mesh: |-
     defaultConfig:
-      discoveryAddress: istiod.service-graph00.svc:15012
+      discoveryAddress: istiod.default.svc:15012
       proxyMetadata:
         DNS_AGENT: ""
       tracing:
@@ -31,7 +31,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: istio-sidecar-injector
-  namespace: service-graph00
+  namespace: default
   labels:
     istio.io/rev: default
     release: istiod-remote
@@ -633,7 +633,7 @@ data:
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
-  name: istio-sidecar-injector-service-graph00
+  name: istio-sidecar-injector-default
   labels:
     istio.io/rev: default
     app: sidecar-injector
