--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -15,6 +15,7 @@ Makefile*                                                        @istio/wg-test-
 /manifests/                                                      @istio/wg-environments-maintainers
 /operator/                                                       @istio/wg-environments-maintainers
 /pilot/                                                          @istio/wg-networking-maintainers
+/pilot/cmd/pilot-agent/                                          @istio/wg-networking-maintainers @istio/wg-security-maintainers
 /pilot/pkg/security/                                             @istio/wg-security-maintainers
 /pilot/pkg/config/                                               @istio/wg-networking-maintainers
 /pilot/pkg/networking/plugin/authn/                              @istio/wg-security-maintainers
@@ -27,11 +28,12 @@ Makefile*                                                        @istio/wg-test-
 /pkg/bootstrap/                                                  @istio/wg-networking-maintainers
 /pkg/config/                                                     @istio/wg-networking-maintainers
 /pkg/envoy/                                                      @istio/wg-networking-maintainers
-/pkg/istio-agent/                                                @istio/wg-networking-maintainers
+/pkg/istio-agent/                                                @istio/wg-networking-maintainers @istio/wg-security-maintainers
 /pkg/keepalive/                                                  @istio/wg-networking-maintainers
 /pkg/kube/                                                       @istio/wg-networking-maintainers
 /pkg/mcp/                                                        @istio/wg-networking-maintainers
 /pkg/queue/                                                      @istio/wg-networking-maintainers
+/pkg/security/                                                   @istio/wg-security-maintainers
 /pkg/spiffe/                                                     @istio/wg-security-maintainers
 /pkg/test/                                                       @istio/wg-test-and-release-maintainers
 /pkg/tracing/                                                    @istio/wg-policies-and-telemetry-maintainers
