--- a/releasenotes/notes/dr-analyzer.yaml
+++ b/releasenotes/notes/dr-analyzer.yaml
@@ -3,3 +3,5 @@ kind: feature
 area: networking
 releaseNotes: |
   *Added* Analyzer warning for DestinationRule not using CaCertificates to validate server identity.
+upgradeNotes: |
+  Upgrade istioctl to help find this vulnerability.
