--- a/tests/testdata/networking/envoyfilter-without-service/configs.yaml
+++ b/tests/testdata/networking/envoyfilter-without-service/configs.yaml
@@ -100,15 +100,15 @@ spec:
       listener:
         filterChain:
           filter:
-            name: "envoy.http_connection_manager"
+            name: "envoy.filters.network.http_connection_manager"
             subFilter:
-              name: "envoy.router"
+              name: "envoy.filters.http.router"
     patch:
       operation: INSERT_BEFORE
       value: # lua filter specification
-        name: envoy.lua
+        name: envoy.filters.http.lua
         typed_config:
-          "@type": "type.googleapis.com/envoy.config.filter.http.lua.v2.Lua"
+          "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
           inlineCode: |
             function envoy_on_request(request_handle)
               request_handle:logWarn("Hello World")
