--- a/releasenotes/notes/monitoring-addr.yaml
+++ b/releasenotes/notes/monitoring-addr.yaml
@@ -4,4 +4,4 @@ area: networking
 
 releaseNotes: |
   *Updated* the the default monitoring address to "127.0.0.1:15014" so that it is accessible only local host for security reasons.
-  If you need access from any where please configure using "--monitoringAddr" flag on Istiod container.
+  If you need access from any where please configure using "--monitoringAddr" flag on Istiod deployment.
