--- a/releasenotes/notes/psfile.yaml
+++ b/releasenotes/notes/psfile.yaml
@@ -1,6 +1,5 @@
 apiVersion: release-notes/v2
 kind: feature
-area: istioctlS
+area: istioctl
 releaseNotes: |
-  *Added*
-  - Allow proxy-status for non-K8s workloads with --file
+  **Added** Allow proxy-status for non-K8s workloads with --file
