--- a/releasenotes/notes/26185.yaml
+++ b/releasenotes/notes/26185.yaml
@@ -4,6 +4,6 @@ kind: feature
 area: security
 
 releaseNotes: |
-  Fix the multi cluster service discovery client SAN generation: taking endpoints' service accounts as the list.
-  Istiod generates the client SAN verification spiffie identity with cluster's own trust domain into consideration.
-  This makes cluster with different trust domain able to communicate via mTLS.
+  Add support for client side Envoy secure naming config when trust domain alias is used.
+  Fix the multi cluster service discovery client SAN generation: takes all endpoints' service accounts
+  into account, rather than the first found service registry.
